SERVER-62882: Move Recipient Service opctx creation outside of lock

(cherry picked from commit a94feb562cd9ffb42c10770fbf5b5d489875cc2f)